# lifemote_internship

./: .pylintrc  README.md  requirements.txt
.github/workflows/: docker_container_build.yml  pylint.yml  pylint_client.yml  pylint_server.yml  unit-tests.yml
app/: docker-compose.yml
app/client/: Dockerfile  entrypoint.sh  main.py
app/server/: .pylintrc  Dockerfile  alembic.ini  entrypoint.sh  main.py  requirements.txt
app/server/alembic/: env.py
app/server/config/: __init__.py  logging_conf.py
app/server/crud/: __init__.py  context.py  item.py  user.py
client/: Dockerfile  main.py
server/: Dockerfile  Dockerfile_test  entrypoint.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
server/src/server/: __init__.py  main.py
server/src/server/alembic/: env.py
server/src/server/alembic/versions/: 06d743706ab4_create_user_table.py  7a977d4d1674_add_completed_column.py  c1c8aa86eeec_create_context_table.py  c8853462c82a_create_item_table.py  e97cee0b8500_remove_password_column_from_user.py  f26a387d5b9c_initialize_database.py
server/src/server/config/: __init__.py
server/src/server/crud/: __init__.py  context.py  item.py  user.py
server/src/server/database/: db.py
server/src/server/models/: context.py  item.py  user.py
server/src/server/routers/: auth.py  contexts.py  extras.py  items.py  users.py
server/src/server/schemas/: item.py  user.py
server/src/server/utils/: auth.py  google.py
server/tests/: test_extras.py  test_items.py  test_main.py
server/tests/test_utils/: extras_data.py  test_utils.py
(+39 files in other folders)
