[metadata]
name = server
description = Backend for Internship Project
author = Kadir Ersoy
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    server 
install_requires =
    docker>=5.0.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24 

[options.package_data]
server=py.typed

